--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "mongodb": "^6.20.0",
